# emo-lib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  download_libs.sh  generate_xcode.sh
cmake/: Dependencies.cmake
examples/: CMakeLists.txt
include/: caffe_classifier.hpp  classifier.hpp  common.hpp  facial_emotion_classifier.hpp  facial_emotion_classifier_cpu.hpp  facial_emotion_classifier_gpu.hpp  input_audio.hpp  input_audio_builder.hpp  input_image.hpp  input_image_builder.hpp  macros.hpp  memory_stream.hpp  mfcc_computer.hpp  speech_emotion_classifier.hpp  speech_emotion_classifier_cpu.hpp  speech_emotion_classifier_gpu.hpp  thread_safe_queue.hpp  trainer.hpp
log/: time_cpu_intel_corei5.txt  time_gpu_intel_iris.txt
models/bvlc_alexnet/: solver.prototxt  train_val.prototxt
models/bvlc_googlenet/: solver.prototxt  train_val.prototxt
models/bvlc_reference_caffenet/: train_val.prototxt
models/emotionnet/: emotionnet_ggn_crop_train.prototxt
models/happynet/: solver.prototxt  train.prototxt
models/speech_net/conv1/: solver.prototxt  train_test.prototxt  training_log.txt
models/speech_net/conv2/: deploy.prototxt  solver.prototxt  train_test.prototxt
models/speech_net/conv4/: deploy.prototxt  solver.prototxt  train_test.prototxt  training_log.txt
models/speech_net/conv4_v2/: solver.prototxt  train_test.prototxt
models/speech_net/lenet/: solver.prototxt  train_test.prototxt
models/speech_net/vgg16/: deploy.prototxt  solver.prototxt  train_test.prototxt  training_log.txt
models/vgg_cnn_s/: train_val.prototxt
models/vgg_face/: solver.prototxt  train_val.prototxt
scripts/benchmark/: time_cpu.sh  time_cpu_speech_net_2.sh  time_gpu.sh
scripts/classify/: classify.bat  classify.sh
scripts/preprocess/: 1_partition.py  1_partition_emodb.py  2_crop_resize.py  3_generate_lmdb.sh  3_generate_lmdb_audio.sh  4_trim.py
scripts/train/: train_alexnet.sh  train_caffenet.bat  train_caffenet.sh  train_googlenet.bat  train_happynet.sh  train_speech_net.sh  train_vgg_face.bat  train_vgg_face.sh
src/: CMakeLists.txt  caffe_classifier.cpp  classifier.cpp  input_audio.cpp  input_audio_builder.cpp  input_image.cpp  input_image_builder.cpp  memory_stream.cpp  mfcc_computer.cpp
tools/cmd_tool/: CMakeLists.txt  main.cpp
tools/convert_audioset/: CMakeLists.txt  main.cpp  mfcc.cpp
tools/emolib_gui/: CMakeLists.txt  emolib_gui.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  wavfile.cpp  wavfile.h  xyseriesiodevice.cpp
tools/gui_tool/: CMakeLists.txt
